# very-nice

./: .gitignore  LICENSE  README.md  TAGS  very-nice2.cabal
app/: Main.hs
main/: TAGS  very-nice2.cabal  very-nice2.cabal~
main/.stack-work/install/x86_64-linux/lts-9.3/8.0.2/flag-cache/: parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  vector-0.12.0.1-692PQMDMB6pIQ1uGwefDcQ  very-nice2-0.1.0.0-9bm9CwTPi3Zm1jHKX2NZO
main/.stack-work/install/x86_64-linux/lts-9.3/8.0.2/lib/x86_64-linux-ghc-8.0.2/very-nice2-0.1.0.0-9bm9CwTPi3Zm1jHKX2NZO/Scheme/: Eval.dyn_hi  LispVal.dyn_hi  LispVal.hi  Parse.dyn_hi  Parse.hi
main/app/: Main.hs~
main/src/Scheme/: Error.hs  Error.hs~  Eval.hs  Eval.hs~  LispVal.hs  LispVal.hs~  Parse.hs  Parse.hs~
presentation/s1/: verynice
src/Scheme/: Error.hs  Eval.hs  Parse.hs  REPL.hs
stdlib/: main.scm  main.scm~
stdlib/types/: boolean.scm  main.scm  main.scm~
