name:                very-nice2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ix/very-nice#readme
license:             BSD3
license-file:        LICENSE
author:              Abraham Levine
maintainer:          arcetera@openmailbox.org
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheme.Parse
                     , Scheme.LispVal
                     , Scheme.Eval
                     , Scheme.Error
                     , Scheme.REPL
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , vector
                     , mtl
  default-language:    Haskell2010

executable very-nice2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , very-nice2
                     , parsec
                     , text
                     , vector
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ix/very-nice
